# bully-election-mpi-sim

./: .gitignore  CMakeLists.txt  README.md  config.json
scripts/: metrics.py  plots.py  run_experiments.py  validate_run.py
src/: failure.hpp  logger.hpp  main.cpp  messages.hpp  node.hpp
visualizer/: autoload.json  debug_log.jsonl  graph.js  index.html  main.js  message_log.jsonl  parser.js  serve.py  state_log.jsonl  style.css  timeline.js
